5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1674_1101.log
== TEST (2019-04-30 11:31:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Insira o consumo de energia: "))
y = input("Insira o tipo de intalacao: ").upper()

print("Entradas:", x, "kWh", "e", "tipo", y)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:42:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Insira o consumo de energia: "))
y = input("Insira o tipo de intalacao: ").upper()

print("Entradas:", x, "kWh", "e", "tipo", y)

if((y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif((y == "R") and (x <= 500)):
	v = x * 0.44
	print("Valor total: R$", v)
elif((y == "R") and (x > 500)):
	v = x * 0.65
	print("Valor total: R$", v)
elif((y == "C") and (x <= 1000)):
	v = x * 0.55
	print("Valor total: R$", v)
elif((y == "C") and (x > 100,0)):
	v = x * 0.60
	print("Valor total: R$", v)
elif((y == "I") and (x <= 5000)):
	v = x * 0.55
	print("Valor total: R$", v)
elif((y == "I") and (x > 5000)):
	v = x * 0.60
	print("Valor total: R$", v)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:44:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Insira o consumo de energia: "))
y = input("Insira o tipo de intalacao: ").upper()

print("Entradas:", x, "kWh", "e", "tipo", y)

if((y != "R") and (y != "I") and (y != "C")):
	print("Dados invalidos")
elif((y == "R") and (x <= 500)):
	v = x * 0.44
	print("Valor total: R$", v)
elif((y == "R") and (x > 500)):
	v = x * 0.65
	print("Valor total: R$", v)
elif((y == "C") and (x <= 1000)):
	v = x * 0.55
	print("Valor total: R$", v)
elif((y == "C") and (x > 100,0)):
	v = x * 0.60
	print("Valor total: R$", v)
elif((y == "I") and (x <= 5000)):
	v = x * 0.55
	print("Valor total: R$", v)
elif((y == "I") and (x > 5000)):
	v = x * 0.60
	print("Valor total: R$", v)
-- EXECUTION TIME:
0.114925
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.800000000000004
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.075
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:45:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Insira o consumo de energia: "))
y = input("Insira o tipo de intalacao: ").upper()

print("Entradas:", x, "kWh", "e", "tipo", y)

if((y != "R") and (y != "I") and (y != "C") and (x < 0 )):
	print("Dados invalidos")
elif((y == "R") and (x <= 500)):
	v = x * 0.44
	print("Valor total: R$", v)
elif((y == "R") and (x > 500)):
	v = x * 0.65
	print("Valor total: R$", v)
elif((y == "C") and (x <= 1000)):
	v = x * 0.55
	print("Valor total: R$", v)
elif((y == "C") and (x > 100,0)):
	v = x * 0.60print("Valor total: R$", v)
	print("Valor total: R$", v)
elif((y == "I") and (x <= 5000)):
	v = x * 0.55
	print("Valor total: R$", v)
elif((y == "I") and (x > 5000)):
	v = x * 0.60
	print("Valor total: R$", v)
-- EXECUTION TIME:
0.219721
-- ERROR:
  File "/home/codebench/codes/1674/1101/main.py", line 21
    v = x * 0.60print("Valor total: R$", v)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:45:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Insira o consumo de energia: "))
y = input("Insira o tipo de intalacao: ").upper()

print("Entradas:", x, "kWh", "e", "tipo", y)

if((y != "R") and (y != "I") and (y != "C") and (x < 0 )):
	print("Dados invalidos")
elif((y == "R") and (x <= 500)):
	v = x * 0.44
	print("Valor total: R$", v)
elif((y == "R") and (x > 500)):
	v = x * 0.65
	print("Valor total: R$", v)
elif((y == "C") and (x <= 1000)):
	v = x * 0.55
	print("Valor total: R$", v)
elif((y == "C") and (x > 100,0)):
	v = x * 0.60print("Valor total: R$", v)
	print("Valor total: R$", v)
elif((y == "I") and (x <= 5000)):
	v = x * 0.55
	print("Valor total: R$", v)
elif((y == "I") and (x > 5000)):
	v = x * 0.60
	print("Valor total: R$", v)
-- ERROR:
File "XXXX", line 21
    v = x * 0.60print("Valor total: R$", v)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:47:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Insira o consumo de energia: "))
y = input("Insira o tipo de intalacao: ").upper()

print("Entradas:", x, "kWh", "e", "tipo", y)

if((y != "R") and (y != "I") and (y != "C") and (x < 0 )):
	print("Dados invalidos")
elif((y == "R") and (x <= 500)):
	v = x * 0.44print("Valor total: R$", v)
	print("Valor total: R$", v)
elif((y == "R") and (x > 500)):
	v = x * 0.65
	V = round(v, 2)
	print("Valor total: R$", v)
elif((y == "C") and (x <= 1000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", v)
elif((y == "C") and (x > 100,0)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", v)
elif((y == "I") and (x <= 5000)):
	v = x * 0.55V = round(v, 2)
	V = round(v, 2)
	print("Valor total: R$", v)
elif((y == "I") and (x > 5000)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", v)
-- ERROR:
File "XXXX", line 12
    v = x * 0.44print("Valor total: R$", v)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:49:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Insira o consumo de energia: "))
y = input("Insira o tipo de intalacao: ").upper()

print("Entradas:", x, "kWh", "e", "tipo", y)

if((y != "R") and (y != "I") and (y != "C") and (x < 0 )):
	print("Dados invalidos")
elif((y == "R") and (x <= 500)):
	v = x * 0.44
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "R") and (x > 500)):
	v = x * 0.65
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x <= 1000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x > 100,0)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x <= 5000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x > 5000)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
-- EXECUTION TIME:
0.174089
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:49:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Insira o consumo de energia: "))
y = input("Insira o tipo de intalacao: ").upper()

print("Entradas:", x, "kWh", "e", "tipo", y)

if((y != "R") and (y != "I") and (y != "C") and (x < 0 )):
	print("Dados invalidos")
elif((y == "R") and (x <= 500)):
	v = x * 0.44
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "R") and (x > 500)):
	v = x * 0.65
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x <= 1000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x > 100,0)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x <= 5000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x > 5000)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:49:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Insira o consumo de energia: "))
y = input("Insira o tipo de intalacao: ").upper()

print("Entradas:", x, "kWh", "e", "tipo", y)

if((y != "R") and (y != "I") and (y != "C") and (x < 0 )):
	print("Dados invalidos")
elif((y == "R") and (x <= 500)):
	v = x * 0.44
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "R") and (x > 500)):
	v = x * 0.65
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x <= 1000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x > 100,0)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x <= 5000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x > 5000)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
-- EXECUTION TIME:
0.131865
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:49:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Insira o consumo de energia: "))
y = input("Insira o tipo de intalacao: ").upper()

print("Entradas:", x, "kWh", "e", "tipo", y)

if((y != "R") and (y != "I") and (y != "C") and (x < 0 )):
	print("Dados invalidos")
elif((y == "R") and (x <= 500)):
	v = x * 0.44
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "R") and (x > 500)):
	v = x * 0.65
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x <= 1000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x > 100,0)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x <= 5000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x > 5000)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:51:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Insira o consumo de energia: "))
y = input("Insira o tipo de intalacao: ").upper()

print("Entradas:", x, "kWh", "e", "tipo", y)

if((y != "R") and (y != "I") and (y != "C") and (x < 0 )):
	print("Dados invalidos")
elif((y == "R") and (x <= 500)):
	v = x * 0.44
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "R") and (x > 500)):
	v = x * 0.65
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x <= 1000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x > 100,0)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x <= 5000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x > 5000)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
-- EXECUTION TIME:
0.142624
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:52:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Insira o consumo de energia: "))
y = input("Insira o tipo de intalacao: ").upper()

print("Entradas:", x, "kWh", "e", "tipo", y)

if((y != "R") and (y != "I") and (y != "C") and (x < 0 )):
	print("Dados invalidos")
elif((y == "R") and (x <= 500)):
	v = x * 0.44
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "R") and (x > 500)):
	v = x * 0.65
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x <= 1000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x > 100,0)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x <= 5000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x > 5000)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
-- EXECUTION TIME:
0.143522
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:15:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Insira o consumo de energia: "))
y = input("Insira o tipo de intalacao: ").upper()

print("Entradas:", x, "kWh", "e", "tipo", y)

if((y != "R") and (y != "I") and (y != "C") and (x < 0 )):
	print("Dados invalidos")
elif((y == "R") and (x <= 500)):
	v = x * 0.44
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "R") and (x > 500)):
	v = x * 0.65
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x <= 1000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x > 100,0)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x <= 5000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x > 5000)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:15:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Insira o consumo de energia: "))
y = input("Insira o tipo de intalacao: ").upper()

print("Entradas:", x, "kWh", "e tipo", y)

if((y != "R") and (y != "I") and (y != "C") and (x < 0 )):
	print("Dados invalidos")
elif((y == "R") and (x <= 500)):
	v = x * 0.44
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "R") and (x > 500)):
	v = x * 0.65
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x <= 1000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x > 100,0)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x <= 5000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x > 5000)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 12:15:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Insira o consumo de energia: "))
y = input("Insira o tipo de intalacao: ").upper()

print("Entradas:", x, "kWh", "e tipo", y)

if((y != "R") and (y != "I") and (y != "C") and (x < 0 )):
	print("Dados invalidos")
elif((y == "R") and (x <= 500)):
	v = x * 0.44
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "R") and (x > 500)):
	v = x * 0.65
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x <= 1000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x > 100,0)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x <= 5000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x > 5000)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
-- EXECUTION TIME:
0.153493
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:17:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Insira o consumo de energia: "))
y = input("Insira o tipo de intalacao: ").upper()

print("Entradas:", x, "kWh", "e tipo", y)

if((y != "R") and (y != "I") and (y != "C") and (x < 0 )):
	print("Dados invalidos")
elif((y == "R") and (x <= 500)):
	v = x * 0.44
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "R") and (x > 500)):
	v = x * 0.65
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x <= 1000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x > 100,0)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x <= 5000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x > 5000)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 12:18:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Insira o consumo de energia: "))
y = input("Insira o tipo de intalacao: ").upper()

print("Entradas:", x, "kWh e tipo", y)

if((y != "R") and (y != "I") and (y != "C") and (x < 0 )):
	print("Dados invalidos")
elif((y == "R") and (x <= 500)):
	v = x * 0.44
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "R") and (x > 500)):
	v = x * 0.65
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x <= 1000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x > 100,0)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x <= 5000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x > 5000)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
-- EXECUTION TIME:
0.188652
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:18:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Insira o consumo de energia: "))
y = input("Insira o tipo de intalacao: ").upper()

print("Entradas:", x, "kWh e tipo", y)

if((y != "R") and (y != "I") and (y != "C") and (x < 0 )):
	print("Dados invalidos")
elif((y == "R") and (x <= 500)):
	v = x * 0.44
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "R") and (x > 500)):
	v = x * 0.65
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x <= 1000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x > 100,0)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x <= 5000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x > 5000)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:19:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Insira o consumo de energia: "))
y = input("Insira o tipo de intalacao: ").upper()

print("Entradas:", x, "kWh e tipo", y)

if((y != "R") and (y != "I") and (y != "C") and (x < 0 )):
	print("Dados invalidos")
elif((y == "R") and (x <= 500)):
	v = x * 0.44
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "R") and (x > 500)):
	v = x * 0.65
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x <= 1000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x > 100,0)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x <= 5000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x > 5000)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:19:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Insira o consumo de energia: "))
y = input("Insira o tipo de intalacao: ").upper()

print("Entradas:", x, "kWh e tipo", y)

if((y != "R") and (y != "I") and (y != "C") and (x < 0 )):
	print("Dados invalidos")
elif((y == "R") and (x <= 500)):
	v = x * 0.44
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "R") and (x > 500)):
	v = x * 0.65
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x <= 1000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x > 100,0)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x <= 5000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x > 5000)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:20:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Insira o consumo de energia: "))
y = input("Insira o tipo de intalacao: ").upper()

print("Entradas:", x, "kWh e tipo", y)

if((y != "R") and (y != "I") and (y != "C") and (x < 0 )):
	print("Dados invalidos")
elif((y == "R") and (x <= 500)):
	v = x * 0.44
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "R") and (x > 500)):
	v = x * 0.65
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x <= 1000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x > 100,0)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x <= 5000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x > 5000)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Valor total: R$ -30.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 12:21:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Insira o consumo de energia: "))
y = input("Insira o tipo de intalacao: ").upper()

print("Entradas:", x, "kWh e tipo", y)

if((y != "R") and (y != "I") and (y != "C") or (x < 0 )):
	print("Dados invalidos")
elif((y == "R") and (x <= 500)):
	v = x * 0.44
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "R") and (x > 500)):
	v = x * 0.65
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x <= 1000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x > 100,0)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x <= 5000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x > 5000)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
-- EXECUTION TIME:
0.139972
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Insira o consumo de energia: Insira o tipo de intalacao: Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 12:22:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Insira o consumo de energia: "))
y = input("Insira o tipo de intalacao: ").upper()

print("Entradas:", x, "kWh e tipo", y)

if((y != "R") and (y != "I") and (y != "C") or (x < 0 )):
	print("Dados invalidos")
elif((y == "R") and (x <= 500)):
	v = x * 0.44
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "R") and (x > 500)):
	v = x * 0.65
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x <= 1000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "C") and (x > 1000)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x <= 5000)):
	v = x * 0.55
	V = round(v, 2)
	print("Valor total: R$", V)
elif((y == "I") and (x > 5000)):
	v = x * 0.60
	V = round(v, 2)
	print("Valor total: R$", V)
-- EXECUTION TIME:
0.171657
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
